Feat: KOSPI API 추가
기존 lab/list에 가던 KOSPI 데이터 분리
/data/kospi로 반환됨
