# docs/swagger.json
@@ -22,6 +22,65 @@
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
+        "/lab/data/kospi": {
+            "get": {
+                "description": "코스피 데이터 반환",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "quant"
+                ],
+                "summary": "Return kospi data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer {access_token}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Kospi data",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "number"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.httpError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.httpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.httpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.httpError"
+                        }
+                    }
+                }
+            }
+        },
         "/lab/data/{quant_id}": {
             "get": {
                 "description": "실험실에서 모델을 체크할 때, 모델의 차트 데이터와 옵션 정보를 반환",
@@ -331,7 +390,10 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": ""
+                        "description": "Quant creation result",
+                        "schema": {
+                            "$ref": "#/definitions/response.QuantResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad request error",
@@ -1264,6 +1326,38 @@
                 },
                 "user": {
                     "$ref": "#/definitions/table.User"
+                }
+            }
+        },
+        "response.QuantResponse": {
+            "type": "object",
+            "properties": {
+                "annual_average_return": {
+                    "type": "number",
+                    "example": -2.21
+                },
+                "chart_data": {
+                    "$ref": "#/definitions/response.ChartData"
+                },
+                "cumulative_return": {
+                    "type": "number",
+                    "example": 15.95
+                },
+                "holdings_count": {
+                    "type": "integer",
+                    "example": 7
+                },
+                "max_loss_rate": {
+                    "type": "number",
+                    "example": -26.46
+                },
+                "quant_id": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "winning_percentage": {
+                    "type": "number",
+                    "example": 45.45
                 }
             }
         },
